css(red33m-form): fix mobile submitted text block and button alignment

--- a/src/styles/views/accessory/_red33m-form.css
+++ b/src/styles/views/accessory/_red33m-form.css
@@ -91,7 +91,7 @@ iframe {
 }
 .r3d-form__button.submit {
   display: inline-block;
-  margin: 2rem 0 0 0;
+  margin-top: 10px;
 }
 
 .r3d-form__submit-error {
