--- a/src/styles/views/accessory/_red33m-form.mobile.css
+++ b/src/styles/views/accessory/_red33m-form.mobile.css
@@ -7,7 +7,8 @@
 
   .r3d-form__text-block,
   .r3d-form__disclaimer,
-  .r3d-form__text-block.before-submit { width: 100%; }
+  .r3d-form__text-block.submitted,
+  .r3d-form__text-block.before-submit { width: 98%; }
 
   .r3d-form__text-input { width: 100% }
   .r3d-form__question { padding-left: 0.8rem; }
